Fix overflowing cards with long level stories

--- a/app/sass/components/_card.scss
+++ b/app/sass/components/_card.scss
@@ -82,10 +82,15 @@
 
         .icon-description {
             margin-top: 7px;
-        }
-
-        .icon-description {
             font-size: 1rem;
+            height: 130px;
+
+            span {
+                max-height: 100%;
+                display: block;
+                overflow: hidden;
+            }
+
         }
 
         img {
